k8s/AnalyticsService/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analyticsservice
  labels:
    app: analyticsservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analyticsservice
  template:
    metadata:
      labels:
        app: analyticsservice
    spec:
      containers:
        - name: analyticsservice
          image: analyticsservice:latest
          ports:
            - containerPort: 8080
