k8s/AnalyticsService/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analyticsservice
  labels:
    app: analyticsservice
spec:
  type: ClusterIP
  selector:
    app: analyticsservice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
